--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "build-installer": "npx electron-wix-msi ."
   },
   "author": "cd-dev",
   "license": "ISC",
@@ -17,7 +18,9 @@
     "@electron-forge/maker-squirrel": "^7.2.0",
     "@electron-forge/maker-zip": "^7.2.0",
     "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
-    "electron": "^28.1.2"
+    "@electron/packager": "^18.1.3",
+    "electron": "^28.1.2",
+    "electron-wix-msi": "^5.0.0"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
