--- a/package.json
+++ b/package.json
@@ -4,25 +4,12 @@
   "description": "SketchValid8 Desktop Application",
   "main": "main.js",
   "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "build-installer": "npx electron-wix-msi ."
+    "start": "electron .",
+    "dev": "nodemon --exec electron ."
   },
   "author": "cd-dev",
   "license": "ISC",
   "devDependencies": {
-    "@electron-forge/cli": "^7.2.0",
-    "@electron-forge/maker-deb": "^7.2.0",
-    "@electron-forge/maker-rpm": "^7.2.0",
-    "@electron-forge/maker-squirrel": "^7.2.0",
-    "@electron-forge/maker-zip": "^7.2.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
-    "@electron/packager": "^18.1.3",
-    "electron": "^28.1.2",
-    "electron-wix-msi": "^5.0.0"
-  },
-  "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron": "9.0.0"
   }
 }
